<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/white_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:drawableStart="@drawable/logo"
        android:drawablePadding="5dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/app_name"
        android:textColor="@color/g_black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_lets_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_thin"
        android:gravity="center"
        android:text="@string/letsRegister"
        android:textColor="@color/g_black"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="@id/tv_app_name"
        app:layout_constraintStart_toStartOf="@id/tv_app_name"
        app:layout_constraintTop_toBottomOf="@id/guideline8" />

    <TextView
        android:id="@+id/tv_dont_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/haveAccount"
        android:textColor="@color/green"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_lets_login"
        app:layout_constraintStart_toStartOf="@id/tv_lets_login"
        app:layout_constraintTop_toBottomOf="@id/tv_lets_login" />

    <EditText
        android:id="@+id/ed_first_name"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:hint="@string/firstName"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tv_dont_have_an_account"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/ed_last_name"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:hint="@string/lastName"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/ed_first_name"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:hint="@string/email"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/ed_last_name"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/ed_email"
        android:singleLine="true"/>


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_background"
        android:fontFamily="@font/poppins_light"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/ed_last_name"
        app:layout_constraintStart_toStartOf="@id/ed_last_name"
        app:layout_constraintTop_toBottomOf="@id/ed_password"
        app:spinning_bar_color="@color/white"
        />


    <ImageView
        android:id="@+id/btn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/facebook_login"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        app:layout_constraintBottom_toBottomOf="@id/btn_facebook"
        app:layout_constraintEnd_toEndOf="@id/btn_facebook"
        app:layout_constraintStart_toStartOf="@id/btn_facebook"
        app:layout_constraintTop_toTopOf="@id/btn_facebook" />

    <ImageView
        android:id="@+id/btn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/google_login"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google"
        app:layout_constraintBottom_toBottomOf="@id/btn_google"
        app:layout_constraintEnd_toEndOf="@id/btn_google"
        app:layout_constraintStart_toStartOf="@id/btn_google"
        app:layout_constraintTop_toTopOf="@id/btn_google" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.89" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1751026" />


</androidx.constraintlayout.widget.ConstraintLayout>