<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/blury_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--    <ImageView-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="match_parent"-->
        <!--        android:scaleType="centerCrop"-->
        <!--        android:src="@drawable/secondscreen_background"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent" />-->

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:drawableStart="@drawable/logo"
            android:drawablePadding="5dp"
            android:fontFamily="@font/poppins_light"
           android:text="@string/app_name"
            android:textColor="@color/g_black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_lets_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_thin"
            android:gravity="center"
            android:text="@string/letsLogin"
            android:textColor="@color/g_black"
            android:textSize="27sp"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <TextView
            android:id="@+id/tv_dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/dontHaveAccount"
            android:textColor="@color/green"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_lets_login"
            app:layout_constraintTop_toBottomOf="@id/tv_lets_login" />

        <EditText
            android:id="@+id/ed_email_login"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/email"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/tv_dont_have_an_account"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/ed_password_login"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/ed_email_login"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/forgotPassword"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ed_password_login"
            app:layout_constraintTop_toBottomOf="@+id/ed_password_login"
            android:layout_marginTop="5dp"/>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/blue_background"
            android:fontFamily="@font/poppins_light"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
            android:layout_marginTop="15dp"
            app:spinning_bar_color="@color/white"/>

        <ImageView
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            android:src="@drawable/facebook_login"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            app:layout_constraintStart_toStartOf="@id/btn_facebook"
            app:layout_constraintEnd_toEndOf="@id/btn_facebook"
            app:layout_constraintTop_toTopOf="@id/btn_facebook"
            app:layout_constraintBottom_toBottomOf="@id/btn_facebook"/>

        <ImageView
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            android:src="@drawable/google_login"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            app:layout_constraintStart_toStartOf="@id/btn_google"
            app:layout_constraintEnd_toEndOf="@id/btn_google"
            app:layout_constraintTop_toTopOf="@id/btn_google"
            app:layout_constraintBottom_toBottomOf="@id/btn_google"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.89" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>